# Mamba-ETTm1-Forecasting

./: .gitignore  README.md  TREE.txt  progressupdate.tex  pyproject.toml  run_experiments.sh
configs/: base_config.yaml  ettm2_config.yaml
configs/experiments/: .gitkeep
notebooks/: Colab_Setup.ipynb
results/: dlinear_ETTm1_training_results.pkl  dlinear_ETTm2_training_results.pkl  dlinear_baseline_results.pkl  dlinear_training_results.pkl  lstm_ETTm1_training_results.pkl  seasonal_naive_baseline_results.pkl
scripts/: .gitkeep  compare_models.py  evaluate_baseline.py  evaluate_trained_model.py  preprocess_data.py  run_all.py  train_dlinear.py  train_lstm.py  train_mamba.py
src/: __init__.py
src/data/: dataset.py  preprocessing.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  baseline.py  lstm_forecaster.py  mamba_forecaster.py
src/training/: __init__.py  losses.py
tests/: test_baseline.py  test_metrics.py
